# netnotify-daemon

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am  org.freedesktop.Notifications.service.in
src/: Makefile.am  netnotify-daemon.c  netnotify-daemon.h  netnotify-daemon.xml
